# Multilayer-Backbone

./: .gitignore  ConceptNode.py  DDI_test.ipynb  Knowledge Graph Analysis.ipynb  KnowledgeGraph.py  MultiDistance.py  Multigraph Exploration.ipynb  README.md  divide_and_conquer_test.ipynb  graph_collapse.py  mp_for_nb.py  testing.py
Documentation/: BackboneProofs.lyx  ParetoBackboneEquivalence.aux  ParetoBackboneEquivalence.fdb_latexmk  ParetoBackboneEquivalence.fls  ParetoBackboneEquivalence.tex
data/academic_hiring/: README.md
data/academic_hiring/raw_data/: create_net.py
data/academic_hiring/raw_data/business/: network.graphml
data/academic_hiring/raw_data/computer_science/: network.graphml
data/academic_hiring/raw_data/history/: network.graphml
data/colombia_bilayer/: README.md
data/colombia_bilayer/raw_data/: city_city_nedges_mobility  code_municipio  create_net.py
rust-version/: Cargo.toml
rust-version/examples/: example.py  graph_collapse.py
rust-version/src/: bfs_tools.rs  closure.rs  conversion.rs  direct_backbone.rs  lib.rs  main.rs  multidistance.rs  multigraph.rs  shortest_paths.rs
