[package]
name = "backbone"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug = true

[dependencies]
rayon = "1.6.1"
rustc-hash = "1.1.0"

[dependencies.pyo3]
version = "0.20.0"
features = ["abi3-py37"]
